# ml4b-project

./: .env.example  .gitignore  Makefile  Night_log.md  README.md  STRUCTURE.md  Setup_WSL_Windows.md  pyproject.toml  requirements.txt  run_app.bat  run_app.sh
.streamlit/: config.toml
app/: __init__.py  streamlit_app.py
app/pages/: __init__.py  home.py  model_performance.py  prediction.py
app/static/: CREDITS.md
app/ui/: __init__.py  journey.py  lottie.py  theme.py  viz.py
data/: README.md
data/processed/: README.md  feature_names.txt
docs/: DECISIONS.md  Handoff.md
docs/architecture/: architecture.md
docs/business_understanding/: business_understanding.md
docs/data/: data_dictionary.md  dataset_evaluation.md
docs/data_understanding/: data_understanding.md  dataset_evaluation.md
docs/decisions/: ADR-001-python-package-manager.md  ADR-002-ml-framework.md  ADR-003-multi-agent-documentation-strategy.md  (+24 more)
notebooks/: 02_data_understanding.ipynb  03_data_preparation.ipynb  04_modeling.ipynb  05_evaluation.ipynb  06_streamlit_demo.ipynb
scripts/: add_labelled_recording.py  build_mmfit_dataset.py  calibrate_gate.py  fit_novelty_detector.py  generate_report_figures.py  inspect_kaggle_dataset.py  rebuild_from_testdaten.py  test_apple_watch_prediction.py  train_model.py  update_model.py
tests/: __init__.py  test_activity_gate.py  test_apple_watch_loader.py  test_augmentation.py  test_canonical.py  test_features.py  test_features_invariant.py  test_feedback.py  test_kaggle_loader.py  test_mmfit_loader.py  test_novelty.py  test_pipeline.py  test_session.py
(+497 files in other folders)
